--- a/resources/views/pages/login.edge
+++ b/resources/views/pages/login.edge
@@ -19,17 +19,11 @@
         </div>
       @end
       
-      <form method="POST" action="/login">
+      <form method="POST" action="{{ route('/login') }}">
         {{ csrfField() }}
         <div class="mb-4 w-full">
           <label class="block mb-1">Email</label>
-          <input
-            type="email"
-            name="email"
-            value="{{ old('email') || '' }}"
-            required
-            class="w-full p-2 border rounded"
-          />
+          <input type="email" name="email" value="{{ old('email') || '' }}" required class="w-full p-2 border rounded" />
           @inputError('email')
             @each(message in $messages)
               <p class="text-red-700 text-sm mt-1">
@@ -41,12 +35,7 @@
 
         <div class="mb-4 w-full">
           <label class="block mb-1">Password</label>
-          <input
-            type="password"
-            name="password"
-            required
-            class="w-full p-2 border rounded"
-          />
+          <input type="password" name="password" required class="w-full p-2 border rounded" />
           @inputError('password')
             @each(message in $messages)
               <p class="text-red-700 text-sm mt-1">
