refactor: fixing static resources for building stage

--- a/resources/views/pages/home.edge
+++ b/resources/views/pages/home.edge
@@ -6,7 +6,7 @@
     <title>
       User Identity
     </title>
-    @vite(['resources/css/app.css', 'resources/js/home.js'])
+    @vite(['resources/js/app.js', 'resources/js/home.js'])
   </head>
   <body class="bg-gray-100 text-gray-900 flex flex-col items-center justify-center">
     @!component('components/header', { title: 'Carteirinha' })
