--- a/resources/views/pages/users.edge
+++ b/resources/views/pages/users.edge
@@ -6,7 +6,7 @@
     <title>
       User Control
     </title>
-    @vite(['resources/css/app.css'])
+    @vite(['resources/js/app.js'])
   </head>
   <body class="bg-gray-100 text-gray-900 flex flex-col items-center justify-center">
     @!component('components/header', { title: 'Users' })
