--- a/resources/views/pages/login.edge
+++ b/resources/views/pages/login.edge
@@ -6,7 +6,7 @@
     <title>
       Login
     </title>
-    @vite(['resources/css/app.css'])
+    @vite(['resources/js/app.js'])
   </head>
   <body class="bg-gray-100 text-gray-900 flex flex-col items-center justify-center">
     <div class="bg-white p-8 rounded shadow flex flex-col justify-center gap-8 min-w-[350px]">
